--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-21 11:03+0200\n"
+"PO-Revision-Date: 2009-09-18 11:50+0200\n"
 "Last-Translator: Chung-Han Yang <dr3939@gmail.com>\n"
 "Language-Team: Foswiki Chinese <dr3939 AT gmail.com>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 1.2.1\n"
 "X-Poedit-Country: Taiwan\n"
@@ -128,7 +128,7 @@ msgstr "%1 是个非法的新子网名称"
 
 #: core/templates/login.sudo.tmpl:4 core/templates/login.tmpl:6
 msgid "%1 is currently logged in"
-msgstr "%1 已经登入"
+msgstr "%1 已经登录"
 
 #: core/templates/messages.tmpl:415
 msgid "%1 is currently set to %2"
@@ -204,7 +204,7 @@ msgstr "\"建立新主题\" 页已被移走"
 
 #: core/templates/login.tmpl:12
 msgid "(%1 login)"
-msgstr "(%1 登入)"
+msgstr "(%1 登录)"
 
 #: core/templates/validate.tmpl:6
 msgid "(%1 validation)"
@@ -281,7 +281,7 @@ msgstr "(编辑)"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:105
 msgid "(how you log in) LoginName:"
-msgstr "(如何登入) LoginName:"
+msgstr "(如何登录) LoginName:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:100
 msgid "(identifies you to others) WikiName:"
@@ -289,7 +289,7 @@ msgstr "(变更身份) WikiName:"
 
 #: core/templates/login.tmpl:4
 msgid "(login)"
-msgstr "(登入)"
+msgstr "(登录)"
 
 #: core/templates/oopsmore.tmpl:3
 msgid "(more)"
@@ -339,7 +339,7 @@ msgstr "(修订版 %1)"
 
 #: core/templates/oopssaveerr.tmpl:7
 msgid "(save error)"
-msgstr "(存档错误)"
+msgstr "(保存错误)"
 
 #: core/templates/searchformat.tmpl:3
 msgid "(search result)"
@@ -998,7 +998,7 @@ msgstr "无法搜寻，错误: %1"
 
 #: core/templates/messages.tmpl:323
 msgid "Could not save %1."
-msgstr "%1 无法存档。"
+msgstr "%1 无法保存。"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:125
 msgid "Country:"
@@ -1172,7 +1172,7 @@ msgstr "子网改名 %1 到 %2 时发生错误 (%3)。请通知 %4 管理员。"
 msgid ""
 "During save of %1 an error was found by the version control system. Please "
 "notify your %2 administrator."
-msgstr "主题 %1 存档时发生版本控制错误。请通知 %2 管理员。"
+msgstr "主题 %1 保存时发生版本控制错误。请通知 %2 管理员。"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:109
 msgid "E-mail address:"
@@ -1249,7 +1249,7 @@ msgstr "输入新用户名和密码以改变身份"
 
 #: core/templates/login.sudo.tmpl:18
 msgid "Enter the Wiki Administrator user or login as set in %1"
-msgstr "输入 Wiki 管理员或依 %1 设定登入"
+msgstr "输入 Wiki 管理员或依 %1 设定登录"
 
 #: core/templates/messages.tmpl:241
 msgid "Error registering new user"
@@ -1261,7 +1261,7 @@ msgstr "注册用户 %1 发生错误"
 
 #: core/templates/messages.tmpl:381
 msgid "Error saving topic"
-msgstr "主题存档失败"
+msgstr "主题保存失败"
 
 #: core/templates/login.tmpl:29
 msgid "Error: %1"
@@ -1537,9 +1537,7 @@ msgstr "若您尚未设定密码，或想重设密码，请到: %1"
 msgid ""
 "If you received a link to this topic in an e-mail or just want to look at "
 "the topic, [[%1][cancel save]] to go to %2."
-msgstr ""
-"若您从收到的电子邮件连到这儿或只是浏览这个主题，请 [[%1][取消存档]] 并转到 %"
-"2。"
+msgstr "若您从收到的电子邮件连到这儿或只是浏览这个主题，请 [[%1][取消保存]] 并转到 %2。"
 
 #: core/templates/messages.tmpl:504
 msgid "If you want to create the topic"
@@ -1627,9 +1625,8 @@ msgid ""
 "data cannot easily be merged though, so in this case you are recommended to "
 "check with %1 first."
 msgstr ""
-"继续存档和编辑也许没有问题，除非您想改变本主题附的表单内容。若 %1 _真的_在您"
-"编辑时存档，您的修改将会合并，并不会遗失任何资料。但表单资料并无法简单地合"
-"并，所以此时建议您先检查 %1。"
+"继续保存和编辑也许没有问题，除非您想改变本主题附的表单内容。若 %1 "
+"_真的_在您编辑时保存，您的修改将会合并，并不会遗失任何资料。但表单资料并无法简单地合并，所以此时建议您先检查 %1。"
 
 #: core/templates/foswiki.tmpl:9
 msgid ""
@@ -1707,7 +1704,7 @@ msgstr "本地客制化的网站设定"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:4
 msgid "Log In"
-msgstr "登入"
+msgstr "登录"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:5
 msgid "Log Out"
@@ -1715,12 +1712,12 @@ msgstr "登出"
 
 #: core/templates/mailresetpassword.tmpl:12
 msgid "Login name %1"
-msgstr "登入名 %1"
+msgstr "登录名 %1"
 
 #: PatternSkin/data/System/PatternSkinElements.txt:231
 #: core/templates/login.tmpl:71
 msgid "Logon"
-msgstr "登入"
+msgstr "登录"
 
 #: core/templates/messages.tmpl:256
 msgid "Mail to"
@@ -1917,7 +1914,7 @@ msgstr "旧版本:"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:290
 msgid "Once registered you can login using your %1 and password."
-msgstr "注册后您可以帐号 %1 和密码登入."
+msgstr "注册后您可以帐号 %1 和密码登录."
 
 #: core/templates/messages.tmpl:484
 msgid "Only members of the %1 are allowed to perform this action."
@@ -2094,7 +2091,7 @@ msgstr "快速编辑现有属性（编辑主题并设定新属性）"
 #: EditTablePlugin/data/System/EditTablePlugin.txt:162
 #: EditTablePlugin/lib/Foswiki/Plugins/EditTablePlugin/Core.pm:977
 msgid "Quiet save"
-msgstr "快速存档"
+msgstr "快速保存"
 
 #: PatternSkin/data/Main/WebLeftBarExample.txt:10
 #: PatternSkin/data/Sandbox/WebLeftBarExample.txt:10
@@ -2263,7 +2260,7 @@ msgstr "重新输入密码:"
 
 #: core/templates/messages.tmpl:27
 msgid "Rev %1 was saved by %2, while you were still editing."
-msgstr "在您编辑期间，用户 %2 以版本 %1 存档。"
+msgstr "在您编辑期间，用户 %2 以版本 %1 保存。"
 
 #: MailerContrib/templates/mailnotify.tmpl:44
 #: MailerContrib/templates/mailnotify.tmpl:76
@@ -2280,16 +2277,16 @@ msgstr "修订版"
 
 #: PatternSkin/templates/settings.pattern.tmpl:25
 msgid "S = Save, C = Cancel"
-msgstr "S = 存档，C = 取消"
+msgstr "S = 保存，C = 取消"
 
 #: PatternSkin/templates/preview.pattern.tmpl:22
 msgid "S = Save, Q = Quiet save, K = Save and Continue, D = Discard"
-msgstr "S = 存档，Q = 快速存档，K = 存档并继续编辑，D = 放弃"
+msgstr "S = 保存，Q = 快速保存，K = 保存并继续编辑，D = 放弃"
 
 #: PatternSkin/templates/edit.pattern.tmpl:53
 msgid ""
 "S = Save, Q = Quiet save, K = Save and Continue, P = Preview, C = Cancel"
-msgstr "S = 存档，Q = 快速存档，K = 存档并继续编辑，P = 预览，C = 取消"
+msgstr "S = 保存，Q = 快速保存，K = 保存并继续编辑，P = 预览，C = 取消"
 
 #: EditTablePlugin/data/System/EditTablePlugin.txt:161
 #: EditTablePlugin/lib/Foswiki/Plugins/EditTablePlugin/Core.pm:973
@@ -2639,7 +2636,7 @@ msgstr "附件和任何历史将移到新主题."
 msgid ""
 "The chances are good that %1 has simply navigated away from the edit page "
 "without saving."
-msgstr "若 %1 仅浏览到编辑页而未存档是没有问题的。"
+msgstr "若 %1 仅浏览到编辑页而未保存是没有问题的。"
 
 #: core/templates/renamebase.tmpl:69
 msgid ""
@@ -2715,7 +2712,7 @@ msgstr "两次输入的密码不相同。"
 
 #: core/templates/messages.tmpl:535
 msgid "The user %1 has already been activated, and should be able to log in."
-msgstr "用户 %1 已经启动并可登入。"
+msgstr "用户 %1 已经启动并可登录。"
 
 #: core/templates/messages.tmpl:391
 msgid "There are problems with renaming this web:"
@@ -2870,7 +2867,7 @@ msgstr "主题 %1 不存在"
 
 #: core/templates/messages.tmpl:322
 msgid "Topic Save Error"
-msgstr "主题存档错误"
+msgstr "主题保存错误"
 
 #: PatternSkin/templates/attachtables.pattern.tmpl:15
 msgid "Topic attachments"
@@ -2903,7 +2900,7 @@ msgstr "主题版本:"
 
 #: core/templates/oopssaveerr.tmpl:11
 msgid "Topic save error"
-msgstr "主题存档错误"
+msgstr "主题保存错误"
 
 #: core/data/System/WebTemplateTopics.txt:2
 msgid "Topic templates in %1 Web"
@@ -3175,9 +3172,8 @@ msgid ""
 "cannot easily be merged though, so in this case you are recommended to check "
 "with %1 first."
 msgstr ""
-"鼓励您存档后继续编辑 - 除非您想改变本主题附的表单内容。如果 %1 _真的_在您编辑"
-"时存档，您的修改将会合并，而不会有资料遗失。但表单资料无法简单合并，所以此时"
-"建议您先检查 %1。"
+"鼓励您保存后继续编辑 - 除非您想改变本主题附的表单内容。如果 %1 "
+"_真的_在您编辑时保存，您的修改将会合并，而不会有资料遗失。但表单资料无法简单合并，所以此时建议您先检查 %1。"
 
 #: PatternSkin/templates/view.pattern.tmpl:39
 msgid "You are here:"
@@ -3291,7 +3287,7 @@ msgstr ""
 
 #: core/templates/oopsmore.tmpl:22
 msgid "You will be able to review the copied topic before saving"
-msgstr "您能在审查复制的主题后再存档"
+msgstr "您能在审查复制的主题后再保存"
 
 #: core/templates/oopsmore.tmpl:120
 msgid "You will be able to review the topic before saving it to a new revision"
@@ -3594,15 +3590,15 @@ msgstr "value='预览' accesskey='p'"
 
 #: PatternSkin/templates/edit.pattern.tmpl:41
 msgid "value='Quiet save' accesskey='q'"
-msgstr "value='快速存档' accesskey='q'"
+msgstr "value='快速保存' accesskey='q'"
 
 #: PatternSkin/templates/edit.pattern.tmpl:43
 msgid "value='Save and Continue' accesskey='k'"
-msgstr "value='存档并继续编辑' accesskey='k'"
+msgstr "value='保存并继续编辑' accesskey='k'"
 
 #: PatternSkin/templates/edit.pattern.tmpl:39
 msgid "value='Save' accesskey='s'"
-msgstr "value='存档' accesskey='s'"
+msgstr "value='保存' accesskey='s'"
 
 #: core/templates/attachtables.tmpl:42
 msgid "view"
